:sparkles: improve class5 and add labs